Add validated CSV/Excel property import persisted to PostgreSQL